--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.1",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/react": "^16.3.0",
+    "@types/node": "^24.1.0",
     "jsdom": "^26.1.0",
     "motion": "^12.23.11",
     "react": "^18.2.0",
