--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
     "baseUrl": ".",
     "paths": {
       "@cpts/*": ["src/components/*"],
-      "@pages/*": ["src/pages/*"]
+      "@pages/*": ["src/pages/*"],
+      "@common/*": ["src/common/*"]
     }
   },
   "include": ["src"],
